# MintMind

./: .bunfig.toml  .eslint-ignore  .gitignore  .taurignore  .vscode-test.js  APIs.md  ARCHITECTURE.md  BUILD_ALTERNATIVE_README.md  CONTRIBUTING.md  DEAD_CODE_ANALYSIS.md  DEPENDENCY_POLICY.md  DEVELOPMENT.md  Dockerfile  FILESYSTEM_MIGRATION.md  JEST_SETUP.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  README.md.bak  SECURITY.md  TELEMETRY.md  ThirdPartyNotices.txt  build-alternative.mjs  cgmanifest.json  deny.toml  esbuild.config.mjs  eslint.config.js  jest.config.js  migration_plan.md  package.json  product.json  swc.config.json  tauri.conf.json  test-logger.js  test-logger.mjs  tsconfig.esm.json  tsconfig.json
.devcontainer/: README.md
.eslint-plugin-local/: README.md  code-limited-top-functions.ts  vscode-dts-vscode-in-comments.ts
.github/workflows/: bundle-analysis.yml  code-quality.yml  copilot-setup-steps.yml  fileio-service-tests.yml  jest-tests.yml  monaco-editor.yml  pr-darwin-test.yml  pr-linux-test.yml  pr-node-modules.yml  pr-win32-test.yml  pr.yml  publish.yml  rust-watcher-tests.yml  snyk.yml
.jest/cache/: haste-map-b388270faf0b7a983dd7dc22b5102d41-d3d87f21ba3fb2c3f97f8e7abc33d829-1250b16a767fbad65bee67fa8a1dfc94  perf-cache-b388270faf0b7a983dd7dc22b5102d41-da39a3ee5e6b4b0d3255bfef95601890
.roo/: mcp.json
bundle-reports/: README.md  optimization-report-1762973861794.json
cli/: Cargo.toml  README.md  build.rs
cli/benches/: fileio_benches.rs
cli/examples/: echo_service.rs
cli/src/: auth.rs  constants.rs  lib.rs  log.rs  rpc.rs  self_update.rs  singleton.rs  state.rs  update_service.rs
cli/src/commands/: args.rs  serve_web.rs
cli/src/desktop/: version_manager.rs
cli/src/services/: README.md  ipc.rs  lifecycle.rs  logging.rs  mod.rs  paths.rs
cli/src/services/fileio/: locks.rs  mod.rs  operations.rs  platform.rs  service.rs  types.rs
cli/src/services/fileio/tests/: concurrency_tests.rs  integration_tests.rs  ipc_tests.rs  locks_tests.rs  mod.rs  operations_tests.rs  platform_tests.rs  unit_tests.rs
cli/src/services/rgparser/: README.md  converter.rs  parser.rs  service.rs  types.rs
cli/src/services/tests/: ipc_tests.rs  lifecycle_tests.rs  paths_tests.rs
cli/src/services/watcher/: coalescer.rs  mod.rs  non_recursive.rs  recursive.rs  service.rs  suspend.rs  throttler.rs  types.rs
cli/src/services/watcher/tests/: coalescer_tests.rs  integration_tests.rs  mod.rs
cli/src/tunnels/: challenge.rs  code_server.rs  control_server.rs  dev_tunnels.rs  legal.rs  nosleep_linux.rs  paths.rs  protocol.rs  service_linux.rs  service_windows.rs  singleton_client.rs
cli/src/util/: errors.rs  http.rs  io.rs  is_integrated.rs  machine.rs  prereqs.rs  zipper.rs
docs/: API.md  BUN_MIGRATION_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT.md  ELECTRON_REMOVAL_COMPLETE.md  GLOBAL_RULES.md  IPC_MIGRATION_GUIDE.md  JEST_MIGRATION_GUIDE.md  KEYBOARD_LAYOUT_MIGRATION_GUIDE.md  NATIVE_MODULES_MIGRATION_GUIDE.md  PROJECT_IMPROVEMENT_PLAN.md  PTY_MIGRATION_GUIDE.md  TAURI_EXTENSION_DEVELOPER_GUIDE.md  TAURI_KNOWN_ISSUES.md  TAURI_MIGRATION_ROADMAP.md  TAURI_MIGRATION_USER_GUIDE.md  TAURI_TESTING_GUIDE.md  TAURI_V2_CONFIGURATION.md  TESTING.md  TEST_ORGANIZATION.md  WINDOWS_NATIVE_MODULES_MIGRATION.md  WINDOW_MIGRATION_GUIDE.md
extensions/: shared.webpack.config.mjs  tsconfig.base.json
k8s/: deployment.yaml
playwright-report/: index.html
remote/: .npmrc  package.json
ripgrep-rust-parser/: Cargo.toml
scripts/: analyze-bundles.js  code-cli.bat  code-cli.sh  code-perf.js  code-server.bat  code-server.js  code-server.sh  code-web.bat  code.bat  code.sh  convert-images.sh  convert-tests.js  convertToRGBA.js  enhanced-bundle-analysis.js  generate-definitelytyped.sh  migrate-to-bun.sh  optimize-loader.js  organize-tests.sh  performance-benchmark.js  platform-test-runner.sh  playground-server.ts  setup-git-hooks.sh  setup-snyk.sh  test-documentation.bat  test-documentation.sh  test-integration.bat  test-integration.sh  test-remote-integration.bat  test-remote-integration.sh  test-web-integration.bat  test-web-integration.sh  test.bat  test.sh  validate-no-electron.sh  validate-package-managers.js  xterm-symlink.ps1
src/: bootstrap-cli.ts  bootstrap-esm.ts  bootstrap-fork.ts  bootstrap-import.ts  bootstrap-meta.ts  bootstrap-node.ts  bootstrap-server.ts  cli.ts  main.ts  server-cli.ts  server-main.ts  tsconfig.json  tsec.exemptions.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: keyboard-layout.json  main-capability.json  process-management.json  pty-management.json
src-tauri/src/: commands.rs  dialog.rs  fs.rs  lib.rs  main.rs  shell.rs  validations.rs
src-tauri/src/modules/keyboard/: mod.rs
src-tauri/src/modules/process/: mod.rs
src-tauri/src/modules/pty/: mod.rs
src-tauri/src/modules/registry/: mod.rs
test/: bootstrap-esm.test.ts  bootstrap-node.test.ts  server-cli.test.ts  setup.ts  typescript-module.test.ts  utils.test.ts
(+5727 files in other folders)
