[package]
name = "code-cli"
version = "0.1.0"
edition = "2021"
default-run = "code"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "code"

[[bin]]
name = "watcher"

[dependencies]
futures = "0.3.31"
clap = { version = "4.5.51", features = ["derive", "env"] }
open = "5.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "native-tls"] }
tokio = { version = "1.38.0", features = ["full"] }
zbus = { version = "5.12.0" }
zbus_macros = "5.12.0"
zbus_names = "4.2.0"
zvariant = "5.8.0"
zvariant_derive = "5.8.0"
zvariant_utils = "3.2.1"
tokio-util = { version = "0.7.17", features = ["compat", "codec"] }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib"] }
zip = { version = "6.0.0", default-features = false, features = ["time", "deflate"] }
regex = "1.12.2"
lazy_static = "1.5.0"
sysinfo = { version = "0.37.2", features = ["system"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rmp-serde = "1.3.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
dirs-next = "2.0.0"
rand = { version = "0.9.2", features = ["std", "std_rng"] }
opentelemetry = { version = "0.31.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tonic", "tls"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
serde_bytes = "0.11.19"
chrono = { version = "0.4.42", features = ["serde", "std", "clock"], default-features = false }
gethostname = "1.1.0"
libc = "0.2.177"
tunnels = { git = "https://github.com/microsoft/dev-tunnels", rev = "8cae9b2a24c65c6c1958f5a0e77d72b23b5c6c30", default-features = false, features = ["connections"] }
# Usando keyring sin características específicas para evitar conflictos
keyring = "3.6.3"
dialoguer = "0.12.0"
hyper = { version = "0.14.32", features = ["server", "http1", "http2", "backports"] }
indicatif = "0.18.3"
tempfile = "3.23.0"
clap_lex = "0.7.6"
url = "2.5.7"
async-trait = "0.1.89"
log = "0.4.28"
const_format = "0.2.35"
sha2 = "0.10.9"
base64 = "0.22.1"
shell-escape = "0.1.5"
thiserror = "2.0.17"
cfg-if = "1.0.4"
pin-project = "1.1.10"
console = "0.16.1"
bytes = "1.10.1"
tar = "0.4.44"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
globset = "0.4.18"
crossbeam-channel = "0.5.15"
unicode-normalization = "0.1.25"

[build-dependencies]
serde = { version="1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = "0.3.9"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }

[patch.crates-io]
russh = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-cryptovec = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-keys = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }

[dev-dependencies]
criterion = "0.7"

[profile.release]
strip = true
lto = true

[features]
default = []
vsda = []
vscode-encrypt = []
