[package]
name = "mintmind-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["wry"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.12.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
sysinfo = "0.37.2"
tokio = { version = "1.0", features = ["full"] }
portable-pty = "0.9.0"
urlencoding = "2.1"
dirs-next = "2.0.0"
unicode-normalization = "0.1.25"
